<resources>
    <string name="app_name">Smart_home_center_box</string>
    <string name="TextView_password">请输入密码</string>
    <string name="TextView_username">请输入用户名</string>
    <string name="button_login">登录</string>
    <string name="editText_password">password</string>
    <string name="editText_username">username</string>
    <string name="Text_login_welcome">欢迎使用智能家居系统！</string>
    <string name="title_activity_main__navigate_">Main_Navigate_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_overview">概览</string>
    <string name="menu_home_control">控制中心</string>
    <string name="menu_setting">设置</string>

    <string name="home_second">Home Second</string>



    <string name="login_correct">登录成功！</string>
    <string name="homeoverviewTextWelcome">欢迎回来！</string>
</resources>
